fix: minor desk style inconsistencies
- made onboarding widget button default from primary
  as it takes too much attention
- removed desk navbar dropshadow
- made sidebar text smaller and added padding to plus icon and hover effect
- as we need border in tree view btn-group added those styles in tree.scss
- made hover black on workspace links
- dark mode misc

--- a/frappe/public/scss/desk/dark.scss
+++ b/frappe/public/scss/desk/dark.scss
@@ -194,7 +194,7 @@ $check-icon-dark: url("data:image/svg+xml, <svg viewBox='0 0 8 7' fill='none' xm
 		}
 	}
 	.comment-input-wrapper .ql-editor.ql-blank::before {
-		color: var(--text-muted);
+		color: var(--text-color);
 	}
 	// --appreciation-color: var(--dark-green-100);
 	// --appreciation-bg: var(--dark-green-600);
